fixed z-index navbar

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,7 +14,7 @@ body {
 }
 
 #navbar {
-    background-color: rgba(63, 44, 67, 0.646);
+    background-color: rgba(63, 44, 67, 0.81);
     position: fixed;
     top: 0;
     width: 100%;
@@ -25,6 +25,7 @@ body {
     right: 0;
     color: #fff;
     text-align: center;
+    z-index: 99999;
 }
 
 #navbar a {
